--- a/templates/projects/new.html
+++ b/templates/projects/new.html
@@ -57,7 +57,7 @@
                     </div>
                     <div class="mb-3">
                         {{ form.spreadsheet_id.label(class="form-label") }}
-                        {{ form.spreadsheet_id(class="form-control", placeholder="أدخل المعرّف هنا...", **data_bs_toggle="tooltip"**, data_bs_placement="top", title="يستخدم لربط بيانات المشروع بجداول Google Sheets للتصدير والاستيراد. يجب أن يكون فريدًا.") }}
+                        {{ form.spreadsheet_id(class="form-control", placeholder="أدخل المعرّف هنا...", data_bs_toggle="tooltip", data_bs_placement="top", title="يستخدم لربط بيانات المشروع بجداول Google Sheets للتصدير والاستيراد. يجب أن يكون فريدًا.") }}
                         <div class="form-text">
                             **معرّف Google Sheet:** يمكنك العثور عليه في رابط ملف Google Sheet الخاص بك (الجزء بين /d/ و /edit).
                         </div>
